--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         :root {
-            --bg-color: #000000;
-            --primary: #00ff94;
-            --secondary: #00b368;
-            --text: #ffffff;
-            --link-bg: rgba(255, 255, 255, 0.05);
+            --bg-color: #f0f9ff;
+            --primary: #4361ee;
+            --secondary: #7209b7;
+            --text: #2b2d42;
+            --link-bg: #ffffff;
         }
 
         body {
@@ -20,18 +20,15 @@
             color: var(--text);
             font-family: 'system-ui', sans-serif;
             min-height: 100vh;
-            background: linear-gradient(to bottom, #000000, #111111);
+            background: linear-gradient(135deg, #f0f9ff 0%, #e0f2fe 100%);
         }
 
-        .particles {
+        .confetti {
             position: fixed;
-            top: 0;
-            left: 0;
             width: 100%;
             height: 100%;
             z-index: 0;
             pointer-events: none;
-            opacity: 0.5;
         }
 
         .profile-section {
@@ -41,13 +38,14 @@
         }
 
         .profile-image {
-            width: 120px;
-            height: 120px;
+            width: 140px;
+            height: 140px;
             border-radius: 50%;
             margin: 0 auto 1.5rem;
             position: relative;
-            background: linear-gradient(45deg, var(--primary), var(--secondary));
-            padding: 4px;
+            background: linear-gradient(45deg, #4361ee, #7209b7);
+            padding: 5px;
+            box-shadow: 0 10px 20px rgba(67, 97, 238, 0.2);
         }
 
         .profile-image img {
@@ -55,22 +53,23 @@
             height: 100%;
             border-radius: 50%;
             object-fit: cover;
-            border: 4px solid black;
+            border: 4px solid white;
         }
 
         .profile-title {
-            font-size: 2.5rem;
+            font-size: 2.8rem;
             font-weight: 800;
             margin-bottom: 0.5rem;
-            background: linear-gradient(135deg, var(--primary), #ffffff);
+            background: linear-gradient(135deg, #4361ee, #7209b7);
             -webkit-background-clip: text;
             background-clip: text;
             color: transparent;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
         }
 
         .profile-description {
-            color: rgba(255, 255, 255, 0.7);
-            font-size: 1.1rem;
+            color: #4a4e69;
+            font-size: 1.2rem;
             max-width: 600px;
             margin: 0 auto 2rem;
         }
@@ -84,59 +83,44 @@
 
         .link-card {
             background: var(--link-bg);
-            border: 1px solid rgba(255, 255, 255, 0.05);
-            border-radius: 1rem;
-            margin-bottom: 1rem;
+            border-radius: 1.5rem;
+            margin-bottom: 1.2rem;
             transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
             position: relative;
             overflow: hidden;
-        }
-
-        .link-card::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.1), transparent);
-            transform: translateX(-100%);
-            transition: 0.5s;
-        }
-
-        .link-card:hover::before {
-            transform: translateX(100%);
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
         }
 
         .link-card:hover {
-            transform: scale(1.02);
-            border-color: var(--primary);
-            box-shadow: 0 0 20px rgba(0, 255, 148, 0.2);
+            transform: translateY(-5px);
+            box-shadow: 0 8px 25px rgba(67, 97, 238, 0.15);
         }
 
         .link-content {
-            padding: 1.25rem;
+            padding: 1.5rem;
             display: flex;
             align-items: center;
             justify-content: space-between;
             gap: 1rem;
+            background: linear-gradient(90deg, transparent, rgba(67, 97, 238, 0.05));
         }
 
         .link-title {
             color: var(--text);
-            font-size: 1.1rem;
-            font-weight: 500;
+            font-size: 1.2rem;
+            font-weight: 600;
             margin: 0;
         }
 
         .link-arrow {
             color: var(--primary);
-            font-size: 1.2rem;
-            transition: transform 0.3s ease;
+            font-size: 1.3rem;
+            transition: all 0.3s ease;
         }
 
         .link-card:hover .link-arrow {
-            transform: translateX(5px);
+            transform: translateX(5px) scale(1.1);
+            color: var(--secondary);
         }
 
         .loading-spinner {
@@ -156,42 +140,41 @@
 
         @media (max-width: 768px) {
             .profile-title {
-                font-size: 2rem;
+                font-size: 2.2rem;
             }
 
             .profile-image {
-                width: 100px;
-                height: 100px;
+                width: 120px;
+                height: 120px;
             }
         }
 
-        @keyframes float {
-            0% { transform: translateY(0px); }
-            50% { transform: translateY(-10px); }
-            100% { transform: translateY(0px); }
+        @keyframes bounce {
+            0%, 100% { transform: translateY(0); }
+            50% { transform: translateY(-15px); }
         }
 
-        .floating {
-            animation: float 3s ease-in-out infinite;
+        .bouncing {
+            animation: bounce 3s ease-in-out infinite;
         }
 
         .footer {
             text-align: center;
             padding: 2rem 0;
-            color: rgba(255, 255, 255, 0.5);
+            color: #4a4e69;
             font-size: 0.9rem;
         }
     </style>
 </head>
 <body>
-    <div class="particles" id="particles-js"></div>
+    <div class="confetti" id="confetti-canvas"></div>
 
     <div class="profile-section">
-        <div class="profile-image floating">
+        <div class="profile-image bouncing">
             <img src="./SMA_ABBS.png" alt="Link Guru">
         </div>
         <h1 class="profile-title">Link Siswa</h1>
-        <p class="profile-description">Akses mudah ke semua tautan terkait PSTS & PSAS</p>
+        <p class="profile-description">Selamat datang di halaman tautan PSTS & PSAS! 🎉</p>
     </div>
 
     <div class="loading-spinner active">
@@ -203,58 +186,44 @@
     <div class="links-container" id="linkContainer"></div>
 
     <footer class="footer">
-        © 2025 Tim IT - PSTS & PSAS
+        © 2025 Tim IT - PSTS & PSAS ✨
     </footer>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tsparticles-confetti@2.12.0/tsparticles.confetti.bundle.min.js"></script>
     <script>
-        // Particle.js configuration
-        particlesJS("particles-js", {
-            particles: {
-                number: { value: 80, density: { enable: true, value_area: 800 } },
-                color: { value: "#00ff94" },
-                shape: { type: "circle" },
-                opacity: {
-                    value: 0.5,
-                    random: true,
-                    animation: { enable: true, speed: 1, minimumValue: 0.1, sync: false }
+        // Confetti configuration
+        const duration = 8000;
+        const animationEnd = Date.now() + duration;
+        let skew = 1;
+
+        function randomInRange(min, max) {
+            return Math.random() * (max - min) + min;
+        }
+
+        (function frame() {
+            const timeLeft = animationEnd - Date.now();
+            const ticks = Math.max(200, 500 * (timeLeft / duration));
+            skew = Math.max(0.8, skew - 0.001);
+
+            confetti({
+                particleCount: 1,
+                startVelocity: 0,
+                ticks: ticks,
+                origin: {
+                    x: Math.random(),
+                    y: (Math.random() * skew) - 0.2
                 },
-                size: {
-                    value: 3,
-                    random: true,
-                    animation: { enable: true, speed: 2, minimumValue: 0.1, sync: false }
-                },
-                line_linked: {
-                    enable: true,
-                    distance: 150,
-                    color: "#00ff94",
-                    opacity: 0.2,
-                    width: 1
-                },
-                move: {
-                    enable: true,
-                    speed: 1,
-                    direction: "none",
-                    random: true,
-                    straight: false,
-                    out_mode: "out",
-                    bounce: false,
-                }
-            },
-            interactivity: {
-                detect_on: "canvas",
-                events: {
-                    onhover: { enable: true, mode: "repulse" },
-                    onclick: { enable: true, mode: "push" },
-                    resize: true
-                },
-                modes: {
-                    repulse: { distance: 100, duration: 0.4 },
-                    push: { particles_nb: 4 }
-                }
-            },
-            retina_detect: true
-        });
+                colors: ['#4361ee', '#7209b7', '#ffd60a'],
+                shapes: ['circle', 'square'],
+                gravity: randomInRange(0.4, 0.6),
+                scalar: randomInRange(0.8, 1.2),
+                drift: randomInRange(-0.4, 0.4)
+            });
+
+            if (timeLeft > 0) {
+                requestAnimationFrame(frame);
+            }
+        }());
 
         async function fetchLinks() {
             try {
