--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Link Siswa - PSAS</title>
+    <title>Link Siswa - PSTS</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
@@ -174,7 +174,7 @@
             <img src="./SMA_ABBS.png" alt="Link Guru">
         </div>
         <h1 class="profile-title">Link Siswa</h1>
-        <p class="profile-description">Selamat datang di halaman tautan PSAS! 🎉</p>
+        <p class="profile-description">Selamat datang di halaman tautan PSTS! 🎉</p>
     </div>
 
     <div class="loading-spinner active">
